--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,7 @@
         <h1>This is my Portfolio Page!</h1>
         <img src="images/portfolio.jpg" height="250">
         <br>
-        <a target="_blank" href="https://scratch.mit.edu">
-            <img src="images/scratchlogo.png" height="100">
-        </a>
+        <a href="https://scratch.mit.edu/projects/120915625/">1.1.3 Scratch Project with Adam</a>
+        <a href="https://scratch.mit.edu/projects/121362866/">1.1.5 Scratch Project with Michael</a>
     </body>
 </html>
