--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,10 @@
         <h1>This is my Portfolio Page!</h1>
         <img src="images/portfolio.jpg" height="250">
         <br>
-        <a href="https://scratch.mit.edu/projects/120915625/">1.1.3 Scratch Project with Adam</a>
-        <a href="https://scratch.mit.edu/projects/121362866/">1.1.5 Scratch Project with Michael</a>
+        <a target ="_blank" href="https://scratch.mit.edu/projects/120915625/">1.1.3 Scratch Project with Adam</a>
+        <br>
+        <a target ="_blank" href="https://scratch.mit.edu/projects/121065220/">1.1.4 Scratch Project with Alex</a>
+        <br>
+        <a target ="_blank" href="https://scratch.mit.edu/projects/121362866/">1.1.5 Scratch Project with Michael</a>
     </body>
 </html>
