--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Time</title>
-</head>
+</head>gi
 <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="bear.html">Bears</a>
     <h1>It's high noon</h1>
     <img src="images/noon.jpg" height="250">
 </body>
